<resources>
    <string name="app_name">AppsMovie</string>
    <string name="fun_movie">Fun Movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="title_home">title_home</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="releasedate">ReleaseDate</string>
    <string name="popularity">Popularity</string>
    <string name="original_language">Original Language:</string>
    <string name="overview">Overview :</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget">Widget</string>
    <string name="empty">empty</string>
    <string name="key_daily">key_daily</string>
    <string name="Sumarry_DAILY">Sumarry DAILY</string>
    <string name="summary_release">Summary Release</string>
    <string name="key_release">key release</string>
    <string name="releaase">release</string>
    <string name="summary_language">summary_language</string>
    <string name="key_language">key_language</string>
    <string name="daily">Daily</string>
</resources>
